Fixing dropdown going off screen DMR-789

--- a/frontend/src/sass/components/deals.scss
+++ b/frontend/src/sass/components/deals.scss
@@ -69,6 +69,12 @@
             background: #fff;
             // box-shadow: $box-shadow-sm;
             box-shadow: inset 0 3px 8px -2px rgba(85, 85, 85, 0.5);
+
+            svg,
+            div {
+                position: relative;
+                top: 2px;
+            }
         }
         &.dropdown {
             padding: 0;
